# claustrophobia

./: CMakeLists.txt  main.cpp  math.h  rect.vert  shader.h
.cache/clangd/index/: _fixes.hpp.259CFBD0344CB912.idx  _vectorize.hpp.00653F60DA20ECF2.idx  common.hpp.D3DB65A9E1B0F551.idx  compute_common.hpp.4917F5C6D02AD8DA.idx  compute_vector_relational.hpp.F753978D20428031.idx  constants.hpp.35F268FF503422CD.idx  constants.inl.F78F7DB92F53C87A.idx  context.c.047CA720C597D2D3.idx  egl_context.c.C6430555A083D3C9.idx  egl_context.h.0BD984BF66234345.idx  exponential.hpp.A0BFE53D856ED3F6.idx  func_common.inl.D39D37D34173F8F8.idx  func_exponential.inl.0DFE7C0FCAA5958F.idx  func_geometric.inl.9C8E4D083288F6DC.idx  func_integer.inl.16A6CE4A10623182.idx  func_matrix.inl.C08A250EC643E75D.idx  func_packing.inl.B59ADFF998E4E481.idx  func_trigonometric.inl.1B3A55FECBCD2805.idx  func_vector_relational.inl.08BEDC309878CE71.idx  fwd.hpp.DC21CE9B20961F1C.idx  geometric.hpp.86555BE3FB90B079.idx  glad.c.607590FBC3B5C4A2.idx  glad.h.26C01ED9CA6D1553.idx  glfw3.h.D8E6AFAFBE5007AB.idx  glfw_config.h.F9115F1300372807.idx  glm.hpp.EF0B372F620E7C01.idx  glx_context.c.F86876A2942F2ECB.idx  glx_context.h.6757492FC6482E79.idx  init.c.BE18AF6AF738F44A.idx  input.c.278CF59CB7AD24E2.idx  integer.hpp.0F9824EF86C390AC.idx  internal.h.EC20E7C28619FA52.idx  khrplatform.h.3E699B7CBBFAA411.idx  linux_joystick.c.07C56B43EA048C67.idx  linux_joystick.h.A23D1CF1DD4D1276.idx  main.cpp.40A79D6B12107A3B.idx  mappings.h.9202415C44B19917.idx  mat2x2.hpp.D4348FA690C8BE07.idx  mat2x3.hpp.20B8B5A8CBA20EB9.idx  (+138 more)
